--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>🎄 Secret Santa</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🎅 Secret Santa Game</h1>
-  <p>If you can see this page, GitHub Pages is working!</p>
+
+  <div class="card">
+    <h1>🎅 Secret Santa Game</h1>
+    <p>Win the challenge to unlock your surprise!</p>
+  </div>
+
 </body>
 </html>
