--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>🎄 Secret Santa</title>
+
+  <!-- THIS LINE WAS MISSING -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
 
   <!-- Welcome Screen -->
@@ -15,3 +25,4 @@
 
   <script src="script.js"></script>
 </body>
+</html>
