--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
   <!-- Game Screen -->
   <div class="card hidden" id="game">
-    <h2>🎯 Game Loading...</h2>
-    <p>Get ready!</p>
+    <h2>🎮 Click the Gift When It Turns Green</h2>
+    <div id="gift" onclick="checkClick()">🎁</div>
+    <p id="message"></p>
   </div>
+
 
   <script src="script.js"></script>
 </body>
