--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
 
   <p id="quizMessage"></p>
 </div>
+  
+<!-- Reward Screen -->
+<div class="card hidden" id="reward">
+  <h2>🎉 Congratulations!</h2>
+  <p>You’ve unlocked your Amazon Gift Voucher</p>
+
+  <div class="voucher" id="voucherCode">
+    🎫 <strong>AMAZON-XXXX-XXXX</strong>
+  </div>
+
+  <button onclick="copyVoucher()">Copy Code 📋</button>
+
+  <p class="small">Merry Christmas! 🎄</p>
+</div>
 
 
   <script src="script.js"></script>
