--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 
   <button onclick="copyVoucher()">Copy Code 📋</button>
 
+  <button onclick="restartGame()">Play Again 🔁</button>
+
+
   <p class="small">Merry Christmas! 🎄</p>
 </div>
 
