--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 <!-- Reward Screen -->
 <div class="card hidden" id="reward">
   <h2>🎉 Congratulations!</h2>
-  <p>You’ve unlocked your Amazon Gift Voucher</p>
+  <p>You’ve unlocked your Flipkart Gift Voucher</p>
 
   <div class="voucher" id="voucherCode">
-    🎫 <strong>AMAZON-XXXX-XXXX</strong>
+    🎫 <strong>6000171023929185</strong>
   </div>
 
   <button onclick="copyVoucher()">Copy Code 📋</button>
